[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/perso/Character_SpriteSheet.png" type="Texture" id=1]
[ext_resource path="res://script/Player.gd" type="Script" id=2]
[ext_resource path="res://scene/GUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/player_assets/sponny_without_hand.png" type="Texture" id=4]
[ext_resource path="res://script/Weapon.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.6367, 26.3043 )

[sub_resource type="Animation" id=10]
resource_name = "attack_down"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 2, 4 ]
}

[sub_resource type="Animation" id=3]
resource_name = "walk_down"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=8]
resource_name = "walk_side"
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20 ]
}

[sub_resource type="Animation" id=9]
resource_name = "walk_up"
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16.7179, 26.1849 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 11.8684, 13.2594 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 34 ]
}

[sub_resource type="Animation" id=7]
resource_name = "attack"
length = 0.249
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="Player" type="KinematicBody2D"]
position = Vector2( 514, 289 )
scale = Vector2( 1.2, 1.2 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
speed = 400

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 2.3157 )
shape = SubResource( 1 )

[node name="animPlayer" type="AnimationPlayer" parent="."]
anims/attack_down = SubResource( 10 )
anims/idle = SubResource( 2 )
anims/walk_down = SubResource( 3 )
anims/walk_side = SubResource( 8 )
anims/walk_up = SubResource( 9 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 1 )
hframes = 8
vframes = 4
frame = 8
region_rect = Rect2( 64, 64, 64, 64 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_speed = 7.0

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2( 0, 1.60172 )
shape = SubResource( 4 )

[node name="GUI" parent="." instance=ExtResource( 3 )]

[node name="Weapon" type="Area2D" parent="."]
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Weapon"]
position = Vector2( 29.0876, 6.08295 )
shape = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Weapon"]
anims/RESET = SubResource( 6 )
anims/attack = SubResource( 7 )

[node name="Sprite" type="Sprite" parent="Weapon"]
position = Vector2( 7.17169, 10.8333 )
scale = Vector2( 1.0101, 0.182292 )
texture = ExtResource( 4 )
hframes = 19
vframes = 2
frame = 34

[node name="Position2D" type="Position2D" parent="Weapon"]
position = Vector2( 26.5336, 7.52844 )

[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="yes" from="GUI" to="." method="_on_GUI_yes"]
[connection signal="body_entered" from="Weapon" to="Weapon" method="_on_Weapon_body_entered"]
